# Pico_Drone

./: README.md  lectorPWM.ino  pruebaBORRAR
Giroscopio/: CMakeLists.txt  Giroscopio.cpp
GiroscopioXYZ/: CMakeLists.txt  mpu.cpp  pid.cpp  pid.h
MPU6050/: CMakeLists.txt  Datos.txt  mpu6050_i2c.c
MPU_PID/: CMakeLists.txt  main.cpp  mpu.h  pid.cpp
MPU_PID_PWM/: CMakeLists.txt  mpu.cpp  pid.cpp  pid.h  pwm.cpp  pwm.h
MedidorPulsoInterrMPU/: CMakeLists.txt  MedidorPulsoInterrMPU.cpp
PicoDronAntiguo/: CMakeLists.txt  PicoDrone.cpp
PicoDronPotenciometro/: CMakeLists.txt  PicoDrone.cpp
WifiGiroscopio/: CMakeLists.txt  main.c  mpu.c  mpu.h  ssi.h
WifiLED/: main.c
picoExamples/pico_w/wifi/wifi_scan/: CMakeLists.txt  picow_wifi_scan.c
